--- a/package.json
+++ b/package.json
@@ -18,14 +18,16 @@
     "@nextui-org/react": "^2.1.13",
     "@nextui-org/system": "^2.0.10",
     "@nextui-org/theme": "^2.1.9",
-    "axios": "^1.5.1",
+    "axios": "^1.6.0",
     "framer-motion": "^10.16.4",
     "lottie-react": "^2.4.0",
     "lottie-web": "^5.12.2",
+    "mongoose": "^8.0.0",
     "next": "13.5.6",
     "react": "^18",
     "react-dom": "^18",
-    "react-swipeable-views-utils": "^0.14.0"
+    "react-swipeable-views-utils": "^0.14.0",
+    "react-toastify": "^9.1.3"
   },
   "devDependencies": {
     "autoprefixer": "^10",
