--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@nextui-org/react": "^2.1.13",
     "@nextui-org/system": "^2.0.10",
     "@nextui-org/theme": "^2.1.9",
+    "@reduxjs/toolkit": "^1.9.7",
     "axios": "^1.6.0",
     "framer-motion": "^10.16.4",
     "lottie-react": "^2.4.0",
@@ -26,8 +27,11 @@
     "next": "13.5.6",
     "react": "^18",
     "react-dom": "^18",
+    "react-redux": "^8.1.3",
     "react-swipeable-views-utils": "^0.14.0",
-    "react-toastify": "^9.1.3"
+    "react-toastify": "^9.1.3",
+    "redux": "^4.2.1",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^10",
