--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@nextui-org/system": "^2.0.10",
     "@nextui-org/theme": "^2.1.9",
     "@reduxjs/toolkit": "^1.9.7",
+    "@stripe/react-stripe-js": "^2.3.2",
     "axios": "^1.6.0",
+    "dotenv": "^16.3.1",
     "framer-motion": "^10.16.4",
     "lottie-react": "^2.4.0",
     "lottie-web": "^5.12.2",
@@ -28,6 +30,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-redux": "^8.1.3",
+    "react-stripe-checkout": "^2.6.3",
     "react-swipeable-views-utils": "^0.14.0",
     "react-toastify": "^9.1.3",
     "redux": "^4.2.1",
